# Email-Automation

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  email_automation_docs.md  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  entities.json  erd.mmd  relationships.md  schema.sql  states.md
docs/: architecture.md  celery_and_beat.md  cli.md  demo_script.md  out_of_scope.md  portfolio_walkthrough.md  retries_and_idempotency.md  scheduling.md  state_transitions.md  test_matrix.md  web_routes.md
docs/adr/: 0001-concurrency-and-locking.md
src/emailauto/: __init__.py
src/emailauto/cache/: stats_cache.py
src/emailauto/campaigns/: admin.py  apps.py  models.py  services.py
src/emailauto/campaigns/migrations/: 0001_initial.py  0002_audit_fixes.py
src/emailauto/cli/: apps.py
src/emailauto/cli/management/commands/: emailauto_beat.py  emailauto_campaign.py  emailauto_demo.py  (+10 more)
src/emailauto/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/emailauto/core/: apps.py  clock.py  exceptions.py  results.py  states.py
src/emailauto/email_providers/: base.py  console.py  fake.py  smtp.py
src/emailauto/observability/: audit.py  events.py  logging.py  stats.py
src/emailauto/outbox/: admin.py  apps.py  attempts.py  claim.py  models.py  services.py  transitions.py
src/emailauto/outbox/migrations/: 0001_initial.py  0002_emailoutbox_required_variables_snapshot.py  0003_locked_at_index.py  0004_campaign_completed_event.py  0005_operator_action_event.py
src/emailauto/recipients/: admin.py  apps.py  importers.py  models.py  subscription.py  suppression.py
src/emailauto/recipients/migrations/: 0001_initial.py
src/emailauto/scheduling/: admin.py  apps.py  beat.py  dispatcher.py  due_scanner.py  models.py  recurrence.py  run_transitions.py  tasks.py
src/emailauto/scheduling/migrations/: 0001_initial.py  0002_audit_fixes.py
src/emailauto/teaching/: _fixtures.py  safe_demos.py  unsafe_cache_as_truth.py  unsafe_direct_send.py  unsafe_double_dispatch.py  unsafe_no_idempotency.py  unsafe_retry_duplicate.py
src/emailauto/templates/: admin.py  apps.py  models.py  renderer.py
src/emailauto/templates/migrations/: 0001_initial.py
src/emailauto/web/: apps.py  decorators.py  urls.py  views.py
src/emailauto/workers/: apps.py  retry_policy.py  tasks.py  throttling.py
tests/: conftest.py
tests/admin/: test_admin_actions.py
tests/cli/: test_cli_commands_full.py  test_cli_smoke.py  test_outbox_cli.py
tests/concurrency/: test_concurrent_claim.py  test_duplicate_dispatch.py  test_worker_claim.py
tests/config/: test_entrypoints.py  test_settings_coverage.py
tests/integration/: test_campaign_reconciliation.py  test_dispatcher.py  test_dlq.py  test_large_campaign_batches.py  test_outbox_flow.py  test_run_lifecycle.py  test_stale_claim_recovery.py  test_stale_enqueue_recovery.py  test_template_snapshot.py
tests/scheduling/: test_cron.py  test_dispatcher_resilience.py  test_one_time_schedule.py  test_recurring_schedule.py  test_utc_handling.py
tests/teaching/: test_unsafe_examples.py
tests/unit/: test_audit_fixes.py  test_campaign_services_coverage.py  test_campaign_transitions.py  test_core_coverage.py  test_dispatcher_coverage.py  test_email_backends.py  test_email_providers_full.py  test_idempotency_key.py  test_importer_merge.py  test_importers_coverage.py  test_max_coverage_cli.py  test_max_coverage_dispatcher.py  test_max_coverage_final.py  test_max_coverage_misc.py  test_max_coverage_outbox.py  test_max_coverage_recurrence.py  test_max_coverage_web.py  test_model_validation.py  test_outbox_services_coverage.py  test_polish_fixes.py  test_rate_limit.py  test_recent_failures.py  test_render_context.py  test_renderer_coverage.py  test_retry_enqueued.py  test_retry_policy.py  test_round2_fixes.py  test_round3_fixes.py  test_round4_fixes.py  test_services_extended.py  test_state_transitions.py  test_suppression.py  test_template_renderer.py
tests/web/: test_auth_and_partials.py  test_dashboard.py  test_operator_actions.py  test_operator_permission.py  test_routes.py  test_views_render.py  test_web_coverage.py
tests/workers/: test_celery_tasks.py  test_retry_task.py  test_started_at.py  test_suppressed_send.py  test_worker_exception_recovery.py
(+13 files in other folders)
