[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-automation-capstone"
version = "0.2.0"
description = "Scheduled email automation with Django, Celery, outbox idempotency, retries, DLQ, CLI, and HTMX operator dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["django", "celery", "email", "outbox", "idempotency", "capstone"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
]
dependencies = [
  "Django>=5.2,<6",
  "celery>=5.5,<6",
  "django-celery-beat>=2.8,<3",
  "django-redis>=5.4,<8",
  "dj-database-url>=2.3,<4",
  "redis>=5.2,<9",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-django>=4.8,<5",
  "pytest-cov>=5.0,<8",
  "mypy>=1.8,<3",
  "django-stubs[compatible-mypy]>=5.1,<7",
  "ruff>=0.6,<1",
]
prod = [
  "gunicorn>=22.0,<27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"emailauto.web" = ["templates/**/*.html", "static/**/*"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ['migrations/', 'tests/']

[tool.django-stubs]
django_settings_module = "emailauto.config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "emailauto.config.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --disable-warnings -W ignore::ResourceWarning"
filterwarnings = [
  "ignore:unclosed database:ResourceWarning",
  "ignore::ResourceWarning",
]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Long lines are tolerated (log/format strings, model field declarations); the rest of
# the E/F/W/I/B/UP rules still apply.
ignore = ["E501"]

[tool.coverage.run]
source = ["src/emailauto"]
omit = ["*/migrations/*"]

[tool.coverage.report]
skip_covered = false
show_missing = false
fail_under = 99
